--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "next dev -p 3001 --turbo",
+    "dev": "next dev -p 3001",
     "build": "npm-run-all check-env build-db check-db build-tracker build-geo build-app",
     "start": "next start",
     "build-docker": "npm-run-all build-db build-tracker build-geo build-app",
     "start-docker": "npm-run-all check-db update-tracker start-server",
     "start-env": "node scripts/start-env.js",
     "start-server": "node server.js",
-    "build-app": "next build --turbo",
+    "build-app": "next build",
     "build-icons": "svgr ./src/assets --out-dir src/components/svg --typescript",
     "build-components": "tsup",
     "build-tracker": "rollup -c rollup.tracker.config.js",
@@ -102,15 +102,15 @@
     "kafkajs": "^2.1.0",
     "lucide-react": "^0.543.0",
     "maxmind": "^5.0.0",
-    "next": "^15.5.9",
+    "next": "14.2.5",
     "node-fetch": "^3.2.8",
     "npm-run-all": "^4.1.5",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "prisma": "^6.18.0",
     "pure-rand": "^7.0.1",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.4",
     "react-intl": "^7.1.14",
     "react-simple-maps": "^2.3.0",
